panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__functions__test_error_varargs_builtin_names_are_not_lvalues.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/functions/test_error_varargs_builtin_names_are_not_lvalues.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/functions/test_error_varargs_builtin_names_are_not_lvalues.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression (addressof (builtin-name gp_offset)))
         (expression (addressof (builtin-name overflow_arg_area))))))

----- stderr -----
